[metadata]
name = simsio
version = attr: simsio.__version__
author = Marco Rigobello
description = Run numerical scientific simulations and manage I/O.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/rgbmrc/simsio
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
py_modules = simsio
python_requires = >=3.6
install_requires =
    numpy
    h5py
    dpath
    dictdiffer
    ruamel.yaml
    physics-tenpy

[options.extras_require]
dev =
    pre-commit
