[metadata]
name = simsio
version = attr: simsio.__version__
author = Marco Rigobello
description = Run numerical scientific simulations and manage I/O.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/rgbmrc/simsio
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    dpath @ git+https://github.com/rgbmrc/dpath-python@feature/negative-indexing
    dictdiffer
    ruamel.yaml

[options.packages.find]
where = src

[options.extras_require]
dev =
    pre-commit
hdf5 =
    h5py
    hickle
tenpy =
    physics-tenpy
